--- a/css/style.css
+++ b/css/style.css
@@ -1,95 +1,3 @@
-/* dosis-200 - latin */
-@font-face {
-  font-family: 'Dosis-200';
-  font-style: normal;
-  font-weight: 200;
-  src: url('../fonts/dosis-v18-latin-200.eot'); /* IE9 Compat Modes */
-  src: local(''),
-       url('../fonts/dosis-v18-latin-200.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-       url('./fonts/dosis-v18-latin-200.woff2') format('woff2'), /* Super Modern Browsers */
-       url('../fonts/dosis-v18-latin-200.woff') format('woff'), /* Modern Browsers */
-       url('../fonts/dosis-v18-latin-200.ttf') format('truetype'), /* Safari, Android, iOS */
-       url('../fonts/dosis-v18-latin-200.svg#Dosis') format('svg'); /* Legacy iOS */
-}
-/* dosis-300 - latin */
-@font-face {
-  font-family: 'Dosis-300';
-  font-style: normal;
-  font-weight: 300;
-  src: url('../fonts/dosis-v18-latin-300.eot'); /* IE9 Compat Modes */
-  src: local(''),
-       url('../fonts/dosis-v18-latin-300.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-       url('./fonts/dosis-v18-latin-300.woff2') format('woff2'), /* Super Modern Browsers */
-       url('../fonts/dosis-v18-latin-300.woff') format('woff'), /* Modern Browsers */
-       url('../fonts/dosis-v18-latin-300.ttf') format('truetype'), /* Safari, Android, iOS */
-       url('../fonts/dosis-v18-latin-300.svg#Dosis') format('svg'); /* Legacy iOS */
-}
-/* dosis-regular - latin */
-@font-face {
-  font-family: 'Dosis-400';
-  font-style: normal;
-  font-weight: 400;
-  src: url('../fonts/dosis-v18-latin-regular.eot'); /* IE9 Compat Modes */
-  src: local(''),
-       url('../fonts/dosis-v18-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-       url('./fonts/dosis-v18-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
-       url('../fonts/dosis-v18-latin-regular.woff') format('woff'), /* Modern Browsers */
-       url('../fonts/dosis-v18-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
-       url('../fonts/dosis-v18-latin-regular.svg#Dosis') format('svg'); /* Legacy iOS */
-}
-/* dosis-500 - latin */
-@font-face {
-  font-family: 'Dosis-500';
-  font-style: normal;
-  font-weight: 500;
-  src: url('../fonts/dosis-v18-latin-500.eot'); /* IE9 Compat Modes */
-  src: local(''),
-       url('../fonts/dosis-v18-latin-500.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-       url('./fonts/dosis-v18-latin-500.woff2') format('woff2'), /* Super Modern Browsers */
-       url('../fonts/dosis-v18-latin-500.woff') format('woff'), /* Modern Browsers */
-       url('../fonts/dosis-v18-latin-500.ttf') format('truetype'), /* Safari, Android, iOS */
-       url('../fonts/dosis-v18-latin-500.svg#Dosis') format('svg'); /* Legacy iOS */
-}
-/* dosis-600 - latin */
-@font-face {
-  font-family: 'Dosis-600';
-  font-style: normal;
-  font-weight: 600;
-  src: url('../fonts/dosis-v18-latin-600.eot'); /* IE9 Compat Modes */
-  src: local(''),
-       url('../fonts/dosis-v18-latin-600.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-       url('./fonts/dosis-v18-latin-600.woff2') format('woff2'), /* Super Modern Browsers */
-       url('../fonts/dosis-v18-latin-600.woff') format('woff'), /* Modern Browsers */
-       url('../fonts/dosis-v18-latin-600.ttf') format('truetype'), /* Safari, Android, iOS */
-       url('../fonts/dosis-v18-latin-600.svg#Dosis') format('svg'); /* Legacy iOS */
-}
-/* dosis-700 - latin */
-@font-face {
-  font-family: 'Dosis-700';
-  font-style: normal;
-  font-weight: 700;
-  src: url('../fonts/dosis-v18-latin-700.eot'); /* IE9 Compat Modes */
-  src: local(''),
-       url('../fonts/dosis-v18-latin-700.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-       url('./fonts/dosis-v18-latin-700.woff2') format('woff2'), /* Super Modern Browsers */
-       url('../fonts/dosis-v18-latin-700.woff') format('woff'), /* Modern Browsers */
-       url('../fonts/dosis-v18-latin-700.ttf') format('truetype'), /* Safari, Android, iOS */
-       url('../fonts/dosis-v18-latin-700.svg#Dosis') format('svg'); /* Legacy iOS */
-}
-/* dosis-800 - latin */
-@font-face {
-  font-family: 'Dosis-800';
-  font-style: normal;
-  font-weight: 800;
-  src: url('../fonts/dosis-v18-latin-800.eot'); /* IE9 Compat Modes */
-  src: local(''),
-       url('../fonts/dosis-v18-latin-800.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-       url('./fonts/dosis-v18-latin-800.woff2') format('woff2'), /* Super Modern Browsers */
-       url('../fonts/dosis-v18-latin-800.woff') format('woff'), /* Modern Browsers */
-       url('../fonts/dosis-v18-latin-800.ttf') format('truetype'), /* Safari, Android, iOS */
-       url('../fonts/dosis-v18-latin-800.svg#Dosis') format('svg'); /* Legacy iOS */
-}
-
 body {
     height: 100vh;
     box-sizing: border-box;
@@ -125,7 +33,8 @@ body {
   transition: opacity 2s ease-in-out;
   cursor: pointer;
   font-weight: bold;
-  font-family: Dosis-800;
+  font-family: Dosis;
+  font-size: 15px;
   /*transition: all 2s ease-out;*/
 }
 
@@ -189,7 +98,8 @@ body {
   animation: shake 0.82s cubic-bezier(.36,.07,.19,.97) both, FadeIn 1.5s ease-out;
 }*/
 
-#nav.shake {
+#nav:hover {
+  cursor: pointer;
   animation: shake 0.82s cubic-bezier(.36,.07,.19,.97) both;
   /*animation-name: FadeInOut;*/
     /*animation-timing-function: linear;*/
@@ -211,44 +121,58 @@ body {
     }
 }
 
-#l4 {
+#circle4 {
   position: absolute;
   z-index: 1;
   height: 100%;
-  animation: spin 1.5s infinite ease-in-out;
-   /*animation: shake .82s, spin 1.5s;*/
-  /*animation-timing-function: cubic-bezier(.36,.07,.19,.97);
-  animation-iteration-count: infinite;
-  animation-duration: 0.82s;*/
+  /*animation: spin 1.5s infinite ease-in-out;*/
 }
 
-#l3 {
+.spin4 {
+  animation: spin 1.5s infinite ease-in-out; 
+}
+
+#circle3 {
   position: absolute;
   z-index: 2;
   margin: .8em;
   height: 70%;
+  /*transform: translate(22%, 22%);*/
+  /*-webkit-animation: spinReverse 2.25s infinite ease-in-out;*/
+}
+
+.spin3 {
   transform: translate(22%, 22%);
   -webkit-animation: spinReverse 2.25s infinite ease-in-out;
 }
 
-#l2 {
+#circle2 {
   position: absolute;
   z-index: 3;
   margin: 1.35em;
   height: 50%;
-  transform: translate(50%, 50%);
-  -webkit-animation: spin 2.15s infinite ease-in-out;
+  /*transform: translate(50%, 50%);*/
+  /*-webkit-animation: spin 2.15s infinite ease-in-out;*/
 }
 
-#l1 {
+.spin2 {
+  transform: translate(50%, 50%);
+  -webkit-animation: spin 2.15s infinite ease-in-out; 
+}
+
+#circle1 {
   position: absolute;
   z-index: 4;
   margin: 1.875em;
   height: 30%;
-  transform: translate(118%, 118%);
-  -webkit-animation: spinReverse 3s infinite ease-in-out;
+  /*transform: translate(118%, 118%);*/
+  /*-webkit-animation: spinReverse 3s infinite ease-in-out;*/
 }
 
+.spin1 {
+  transform: translate(118%, 118%);
+  -webkit-animation: spinReverse 3s infinite ease-in-out; 
+}
 /*.shake {
   animation-name: shake;
   animation-timing-function: cubic-bezier(.36,.07,.19,.97);
@@ -256,17 +180,17 @@ body {
   animation-duration: 0.82s;
 }*/
 
-.logo-img {
+/*.nav-menu {
   animation-name: shake;
   animation-timing-function: cubic-bezier(.36,.07,.19,.97);
-  /*animation-iteration-count: infinite;*/
-  /*animation-duration: 0.82s;*/
+  animation-iteration-count: infinite;
+  animation-duration: 0.82s;
   animation-play-state: paused;
-}
+}*/
 
-.logo-img:hover {
-  animation-play-state: running;
-}
+/*.nav-menu:hover {*/
+  /*animation-play-state: running;*/
+/*}*/
 /*.logo-img {
   position: absolute;
   margin: auto;
@@ -287,15 +211,6 @@ body {
       /*-webkit-transform: rotate(0deg) translate3d(-.5px, 0, 0);*/
       -webkit-transform: rotate(0deg);
     }
-    /*25% {
-      -webkit-transform: rotate(90deg) translate3d(-.1px, 0, 0);
-    }
-    50% {
-      -webkit-transform: rotate(180deg) translate3d(-.2px, 0, 0);
-    }
-    75% {
-      -webkit-transform: rotate(270deg) translate3d(.2px, 0, 0);
-    }*/
     100% {
       -webkit-transform: rotate(360deg);
     }
@@ -306,46 +221,9 @@ body {
       /*-webkit-transform: rotate(360deg) translate3d(-.5px, 0, 0);*/
       -webkit-transform: rotate(360deg);
     }
-    /*25% {
-      -webkit-transform: rotate(270deg) translate3d(.4px, 0, 0);
-    }
-    50% {
-      -webkit-transform: rotate(180deg) translate3d(-.3px, 0, 0);
-    }
-    75% {
-      -webkit-transform: rotate(90deg) translate3d(.4px, 0, 0);
-    }*/
     100% {
       -webkit-transform: rotate(0deg);
     }
-}
-
-.h2 {
-    font-family: Dosis-200;
-}
-
-.h3 {
-    font-family: Dosis-300;
-}
-
-.h4 {
-    font-family: Dosis-400;
-}
-
-.h5 {
-    font-family: Dosis-500;
-}
-
-.h6 {
-    font-family: Dosis-600;
-}
-
-.h7 {
-    font-family: Dosis-700;
-}
-
-.h8 {
-    font-family: Dosis-800;
 }
 
 #box-1 {
@@ -381,63 +259,47 @@ body {
 
 @keyframes FadeInOut {
     0% {
-        opacity:1;
+        opacity:0;
     }
     25% {
-        opacity:.75;
+        opacity:.25;
     }
     50% {
         opacity:.50;
     }
     75% {
-        opacity:.25;
+        opacity:.75;
     }
     100% {
-        opacity:0;
+        opacity:1;
     }
 }
 @keyframes shake {
   10%, 90% {
     transform: translate3d(-1px, 0, 0);
   }
-
   20%, 80% {
     transform: translate3d(2px, 0, 0);
   }
-
   30%, 50%, 70% {
     transform: translate3d(-4px, 0, 0);
   }
-
   40%, 60% {
     transform: translate3d(4px, 0, 0);
   }
 }
 
-/*@keyframes shake {
-    0% {
-        left: .1px;
-    }
-    50% {
-        left: -.1px;
-    }
-    100% {
-        left: 0;
-    }
-   /* 75% {
-        opacity:.25;
-    }
-    100% {
-        opacity:0;
-    }*/
-/*}*/
-
 img#top {
-    animation-name: FadeInOut;
+    /*animation-name: FadeInOut;*/
+    opacity: 0;
     animation-timing-function: linear;
     animation-iteration-count: infinite;
     animation-duration: 1.5s;
     animation-direction: alternate;
+}
+
+.fadeInOut {
+  animation-name: FadeInOut;
 }
 
 #title {
