--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,13 @@ body {
   transition: all 1s ease-out;
 }
 
+#header {
+  position: absolute;
+  top: 0;
+  right: 0;
+  padding: 5px 30px;
+}
+
 /*#blog {
   transform: rotate(-30deg);
 }*/
@@ -70,7 +77,7 @@ body {
   height: 80px;
   position: absolute;
   top: 50%;
-  left: 387px;
+  left: 386px;
   /*animation-name: shake;
   animation-timing-function: cubic-bezier(.36,.07,.19,.97);
   animation-iteration-count: infinite;
@@ -304,4 +311,8 @@ img#top {
 
 #title {
     text-align: right;
+}
+
+.hidden {
+  display: none !important;
 }
